Changes for 2.2.9rc1

New features:
.......PS. [ZBXNEXT-2354] separated VMware performance collector based statistic retrieval from VMware data retrieval and added items to monitor custom performance counters (wiper)
A.F....... [ZBX-1357] updated Polish and Slovak translations; thanks to Zabbix translators (Richlv)

Bug fixes:
...G...PS. [ZBX-9284] added zabbix log file locking to avoid incomplete logging on log file rotation (igors)
...G...... [ZBX-9143] improved proc.num under Windows to handle more processes (dimir)
...G...... [ZBX-9232] fixed incomplete eventlog messages (igors)
........S. [ZBX-9285] fixed memory leak when processing host prototypes (Sasha)
.......PS. [ZBX-9279] optimized VMware requests to reduce amount of transferred data (wiper)
..F....... [ZBX-9087] fixed DB_ID validation expression to properly validate upper bound of received value and fixed various front-end forms not properly validating IDs (Krists, Ivo)
.......PS. [ZBX-7719] added configurable timeout for VMware data gathering requests (wiper)
...G...... [ZBX-9241] fixed possible vfs.fs.discovery item crash on AIX systems (wiper)
.......PS. [ZBX-9104] fixed repeated error messaging if ssh channel failed to close (igors)
...G...... [ZBX-9183] fixed eventlog message collecting in case of error formatting the log message; thanks to Kodai Terashima (dimir)
...G...... [ZBX-9233] fixed processing of bogus negative value of performance couter (igors)
.......PST [ZBXNEXT-2354] fixed VMware virtual machine network and disk transmission rates being reported in kilobytes rather than bytes (wiper)
A.F....... [ZBX-8448] fixed host and template permissions validation when an object belongs to both read and read-write groups (Ivo)
..F....... [ZBX-8448] added read-only groups in host and template edit forms as grayed out when object belongs to both read and read-write groups (Ivo)